# Karp

./: CMakeLists.txt  README.md  license.txt  third_party_software_notice.txt
example/: reference.fasta  reference.fasta.fai  reference.tax  simulated.data.actual_counts.txt
src/: CMakeLists.txt  Kmer.cpp  KmerIndex.cpp  KmerIndex.h  MinCollector.cpp  MinCollector.h  ProcessReads.cpp  ProcessReads.h  common_k.cpp  common_k.h  fastaIndex.cpp  fastaIndex.h  karp_like_multi.cpp  karp_like_multi.hpp  likelihood_filter.cpp  likelihood_filter.hpp  new_main.cpp  new_main.cpp~  ssw.c  tabulate.cpp  tabulate.hpp  taxonomy.cpp  taxonomy.hpp
tclap/: Makefile
